# ai_test

./: .gitignore  PROJECT_STATUS.md  README.md
ai-webtoon_capcut/: .env.example  .gitignore  AI_CODING_REVIEW.md  CLAUDE.md  HANDOFF.md  HERMES_REVIEW.md  IMPLEMENTATION.md  PRE_DEPLOY.md  PROJECT_START.md  README.md  SECURITY_PLAN.md  TESTING_DONE_CRITERIA.md  pyproject.toml  requirements-alignment.txt  run_all.bat
ai-webtoon_capcut/config/: default.json
ai-webtoon_capcut/docs/: 01_SYSTEM_DESIGN.md  01_SYSTEM_DESIGN_APPENDIX.md  02_DEVELOPMENT_PLAN.md  03_VALIDATION_APPENDIX.md  03_VALIDATION_PLAN.md  04_TEST_APPENDIX.md  04_TEST_PLAN.md  05_REVIEW_GATE.md  06_DECISIONS_AND_RISKS.md  06_DECISIONS_AND_RISKS_APPENDIX.md  07_REFERENCES.md  08_SUNO_SUBTITLE_NORMALIZATION.md  09_REUSABLE_PROGRAM_ARCHITECTURE.md  10_DATA_CONTRACTS_V2.md  11_IMPLEMENTATION_BLUEPRINT_V2.md  12_REUSABILITY_VALIDATION_MATRIX.md  13_DESIGN_AUDIT_AND_MIGRATION.md  14_DESSERT_DATASET_ANALYSIS.md  15_LEAVE_DATASET_ANALYSIS.md  16_THREE_SONG_DESIGN_IMPROVEMENTS_V3.md  17_MULTI_SONG_VALIDATION_REGISTRY.md
ai-webtoon_capcut/docs/ADR/: ADR-001-PLANNER-RENDERER-SEPARATION.md
ai-webtoon_capcut/remotion/: package-lock.json  package.json
ai-webtoon_capcut/schemas/: manifest.schema.json
ai-webtoon_capcut/scripts/: test.ps1  validate-project.ps1  webtoon-capcut-menu.ps1  webtoon-capcut.ps1
ai-webtoon_capcut/src/webtoon_capcut/: __main__.py  cli.py
ai-webtoon_capcut/src/webtoon_capcut/adapters/: audio_probe.py  (+5 more)
ai-webtoon_capcut/tests/unit/: test_adapters.py  test_discovery.py  test_timeline.py
(+8764 files in other folders)
